--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/community": "^1.1.16",
+    "@langchain/openai": "^1.2.8",
     "@supabase/supabase-js": "^2.97.0",
-    "dotenv": "^17.3.1",
-    "langchain": "^1.2.25",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
