--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@langchain/community": "^1.1.16",
     "@langchain/openai": "^1.2.8",
+    "@langchain/textsplitters": "^1.0.1",
     "@supabase/supabase-js": "^2.97.0",
     "next": "16.1.6",
     "react": "19.2.3",
