--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.12",
     "@langchain/community": "^1.1.16",
+    "@langchain/core": "^1.1.26",
     "@langchain/openai": "^1.2.8",
     "@langchain/textsplitters": "^1.0.1",
     "@supabase/supabase-js": "^2.97.0",
+    "dotenv": "^17.3.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
